# ml-training-platform

./: .gitignore  Makefile  README.md  REPORT.md  platform.yaml  principles.yaml  pyproject.toml
artifacts/: comparison_report.txt
artifacts/domain_adapters/finance/: domain_manifest.json
artifacts/domain_adapters/finance-smoke/: adapter_config.json  domain_manifest.json
artifacts/domain_adapters/health/: adapter_config.json  domain_manifest.json
artifacts/tokenizer/: tokenizer.json
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml
docs/: DESIGN.md  PERFORMANCE.md  PRODUCT.md  PROPOSAL.md  SDLC.md
loadtest/: locustfile.py  traffic_simulator.py
monitoring/: observability.py  prometheus.yml
monitoring/grafana/: dashboard.json
src/ml_training/: __init__.py  app.py  architecture.py  cli.py  data_pipeline.py  distribution.py  evaluation.py  evaluation_judge.py  features.py  fine_tuning.py  orchestrator.py  tokenization.py
src/ml_training/control_plane/: __init__.py  config.py  hardware.py  registry.py  sources.py
src/ml_training/data_sources/: __init__.py  fineweb.py
src/ml_training/models/: __init__.py  transformer.py
src/ml_training/packaging/: __init__.py  weights.py
src/ml_training/personalization/: __init__.py  domain_sft.py  lora.py  principles_to_dataset.py
tests/: conftest.py  test_architecture.py  test_checkpoint_avg.py  test_control_plane.py  test_data_sources.py  test_distribution.py  test_evaluation.py  test_features.py  test_judge.py  test_packaging.py  test_personalization.py  test_phased_training.py  test_serving.py  test_tokenization.py  test_transformer.py
tests/data/: judge_corpus.jsonl
(+6 files in other folders)
