[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-training-platform"
version = "0.2.0"
description = "Personalized ML Training Platform: control plane / data plane factory for a customizable, fine-tunable small transformer."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24,<2",
    "click>=8.0",
    "pyyaml>=6.0",
    "torch>=2.2",
    "tokenizers>=0.19",
    "datasets>=2.18",
    "safetensors>=0.4",
    "zstandard>=0.22",
    "transformers>=4.40,<4.45",
    "peft>=0.10",
    "accelerate>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ml-train = "ml_training.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
